// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtnToggle.vue should allow deselecting a value when mandatory prop is used with multiple prop 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should allow new value when mandatory prop is used 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should allow new value when mandatory prop is used with multiple prop 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should not allow empty value when mandatory prop is used 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should not allow empty value when mandatory prop is used with multiple prop 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should use button value attribute if available 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          value="left"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="center"
          class="btn btn--flat btn--active"
          data-ripple="true"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="right"
          class="btn btn--flat"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="material-icons icon"
      >
        add
      </i>
    </div>
  </button>
</div>

`;
